--- a/skeleton/requirements.txt
+++ b/skeleton/requirements.txt
@@ -13,7 +13,8 @@ keras-applications==1.0.8  # via tensorflow
 keras-preprocessing==1.1.0  # via tensorflow
 markdown==3.2.1           # via tensorboard
 mock==3.0.5               # via tensorflow-estimator
-numpy==1.18.4             # via h5py, keras-applications, keras-preprocessing, tensorboard, tensorflow, tensorflow-estimator
+numpy==1.18.4             # via h5py, keras-applications, keras-preprocessing, opencv-contrib-python, skeleton (setup.py), tensorboard, tensorflow, tensorflow-estimator
+opencv-contrib-python==3.4.9.33  # via skeleton (setup.py)
 protobuf==3.11.3          # via tensorboard, tensorflow
 pyyaml==5.3.1             # via skeleton (setup.py)
 six==1.14.0               # via absl-py, grpcio, h5py, keras-preprocessing, mock, protobuf, tensorboard, tensorflow, tensorflow-estimator
