--- a/skeleton/Dockerfile
+++ b/skeleton/Dockerfile
@@ -3,9 +3,14 @@ FROM python:3.5-slim
 # Set the working directory to /app
 WORKDIR /app
 
+# Install system deps
+RUN apt-get update && \
+    apt-get install -y libgtk2.0-dev && \
+    rm -rf /var/lib/apt/lists/*
+
 # Copy & install the requirements
 COPY requirements.txt /app/
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 # Copy & install package
 COPY MANIFEST.in /app
